--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <img src="dorothy.jpg" alt="imagem">
 
         <br>
-        <p>Dorothy Johnson Vaughan, nascida em Kansas City, 1910, foi matemática graduada 
-        pela Wilberforce University.</p>
+        <p>Ordem Paranormal, Um RPG criado pelo criador de conteudo Cellbit.A primeira temporada dessa série, 
+                A Ordem Paranormal, teve seu primeiro episódio exibido em 29 de fevereiro de 2020 no canal do streamer na Twitch.
+                 Assim que a primeira campanha acabou, Cellbit começou a escrever algo maior, com uma equipe maior
+                 e uma nova campanha começou a ser modelada.</p>
 
         
         <p>Durante seus 28 anos de carreira na NASA, foi chefe de um grupo de trabalho 
