--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
                  e uma nova campanha começou a ser modelada.</p>
 
         
-        <p>Durante seus 28 anos de carreira na NASA, foi chefe de um grupo de trabalho 
-        formado apenas por mulheres negras e matemáticas, e tornou-se a primeira 
-        supervisora negra. </p>
+        <p>Atualmente Ordem tem três temporadas oficias e três spin-offs </p>
+        <h2 id="titulo"> Spin-offs </h2>
         
         <p>Autodidata, especializou-se na linguagem de programação FORTRAN, e por isto
          liderou a seção de programação da Divisão de Análise e Computação do Langley 
