--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
         <h3 id="titulo"> O Segredo na ilha </h3>
 
    
-        <p>Autodidata, especializou-se na linguagem de programação FORTRAN, e por isto
-         liderou a seção de programação da Divisão de Análise e Computação do Langley 
-         Research Center. Não é coisa pouca! Quem nunca sonhou em ser programadora na 
-         NASA? A Dorothy realizou essa tarefa e participou de projetos muito 
-         importantes.</p>
+        <p> O Segredo na Ilha. Essa temporada conta com a presença de Gabi Cattuzzo, Cinemagrath, Rakin, Beamom e Goularte. 
+                Ele também revela que essa temporada seguiria uma mecânica diferente, no qual uma sessão equivaleria a um dia na história.</p>
         
         <p>Além disso, ela também é uma das mulheres destacada na história Estrelas Além 
         do Tempo (Hidden Figures) que foi lançado nos cinemas.</p>
