--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
    
         <p> O Segredo na Ilha. Essa temporada conta com a presença de Gabi Cattuzzo, Cinemagrath, Rakin, Beamom e Goularte. 
                 Ele também revela que essa temporada seguiria uma mecânica diferente, no qual uma sessão equivaleria a um dia na história.</p>
-        
-        <p>Além disso, ela também é uma das mulheres destacada na história Estrelas Além 
-        do Tempo (Hidden Figures) que foi lançado nos cinemas.</p>
+
+                <h3 id="titulo"> Sinais do outro lado</h3>
+
+        <p>A segunda campanha spin-off foi anunciada no final do especial Revelando o Segredo na Ilha,
+                 no dia 20 de agosto de 2022. Dando início no dia 29 de outubro de 2022,
+                 Sinais do Outro Lado reúne um grupo formado por Carolinga, Felps, Gary, Guaxinim e LJoga.</p>
 </body>
 </html>
