--- a/index.html
+++ b/index.html
@@ -34,3 +34,15 @@
 </body>
 </html>
       <h3>Quarentena-Episodio especial</h3>
+      <p>Ordem Paranormal: Quarentena é uma sessão especial de dois episódios da série Ordem Paranormal. É uma campanha de RPG two-shot baseada em Ordem Paranormal RPG,
+        sistema oficial da marca,
+        utilizando o suplemento Sobrevivendo ao Horror pela primeira vez. Mestrada pelo streamer, diretor criativo e roteirista de Enigma do Medo
+        Cellbit, é protagonizada por cinco criadores de conteúdo globais,
+
+        Quackity (Benito Camelo)
+        Roier (Luis Miguel Kennedy)
+        Foolish (Jeffrey Bacon)
+        Baghera Jones (Lucie Pocharde)
+        Pac (Diego Thalles)
+        Bagi (Carol)
+        Essa é a primeira campanha da série que será feita com criadores de conteúdo internacionais, tendo como língua principal o Inglês.</p>
