--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                  Sinais do Outro Lado reúne um grupo formado por Carolinga, Felps, Gary, Guaxinim e LJoga.</p>
 </body>
 </html>
-      <h3>Quarentena-Episodio especial</h3>
+      <h3><table style="width:10%">
+        <tr>
+          <th> Quarentena-Episodio</th>l</h3>
       <p>Ordem Paranormal: Quarentena é uma sessão especial de dois episódios da série Ordem Paranormal. É uma campanha de RPG two-shot baseada em Ordem Paranormal RPG,
         sistema oficial da marca,
         utilizando o suplemento Sobrevivendo ao Horror pela primeira vez. Mestrada pelo streamer, diretor criativo e roteirista de Enigma do Medo
@@ -46,3 +48,6 @@
         Pac (Diego Thalles)
         Bagi (Carol)
         Essa é a primeira campanha da série que será feita com criadores de conteúdo internacionais, tendo como língua principal o Inglês.</p>
+        
+
+        
