--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <tr>
           <th> Quarentena-Episodio</th>l</h3>
           <tr>
-
+<body>
       <p>Ordem Paranormal: Quarentena é uma sessão especial de dois episódios da série Ordem Paranormal. É uma campanha de RPG two-shot baseada em Ordem Paranormal RPG,
         sistema oficial da marca,
         utilizando o suplemento Sobrevivendo ao Horror pela primeira vez. Mestrada pelo streamer, diretor criativo e roteirista de Enigma do Medo
@@ -50,6 +50,6 @@
         Pac (Diego Thalles)
         Bagi (Carol)
         Essa é a primeira campanha da série que será feita com criadores de conteúdo internacionais, tendo como língua principal o Inglês.</p>
-        
+<body>          
 
         
