--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                  Sinais do Outro Lado reúne um grupo formado por Carolinga, Felps, Gary, Guaxinim e LJoga.</p>
 </body>
 </html>
-      <h3><table style="width:10%">
+      <table style="width:10%">
         <tr>
-          <th> Quarentena-Episodio</th>l</h3>
+          <th> Quarentena-Episodio</th>
           <tr>
 <body>
       <p>Ordem Paranormal: Quarentena é uma sessão especial de dois episódios da série Ordem Paranormal. É uma campanha de RPG two-shot baseada em Ordem Paranormal RPG,
