--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
                  Sinais do Outro Lado reúne um grupo formado por Carolinga, Felps, Gary, Guaxinim e LJoga.</p>
 
 
-      <table style="width:10%">
-        <tr>
+      <table style="width:10%" <tr>
           <th> Quarentena-Episodio</th>
         
-          <br>
-
+        
 
       <p>Ordem Paranormal: Quarentena é uma sessão especial de dois episódios da série Ordem Paranormal. É uma campanha de RPG two-shot baseada em Ordem Paranormal RPG,
         sistema oficial da marca,
