--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                  Sinais do Outro Lado reúne um grupo formado por Carolinga, Felps, Gary, Guaxinim e LJoga.</p>
 
 
-          <h3> id="titulo"> Quarentena-Episodio</h3>
+          <h3> Quarentena-Episodio</h3>
         
 
       <p>Ordem Paranormal: Quarentena é uma sessão especial de dois episódios da série Ordem Paranormal. É uma campanha de RPG two-shot baseada em Ordem Paranormal RPG,
