--- a/index.html
+++ b/index.html
@@ -55,3 +55,12 @@
 </html>     
       
 <h1>Temporadas oficias</h1>
+<p>Ordem Paranormal é uma websérie brasileira criada pelo streamer Rafael "Cellbit" Lange e dirigida por Júlio Taubkin, na qual uma equipe de influenciadores jogam RPG de mesa.
+         O show começou a ser transmitido em 29 de fevereiro de 2020 pelo canal da Twitch de Cellbit.
+
+        A primeira campanha, intitulada de A Ordem Paranormal foi transmitida em apenas 2 episódios na Twitch, mas repartida em 3 episódios para o YouTube, 
+        sendo finalizada em 7 de março de 2020. A segunda, intitulada de O Segredo na Floresta, foi transmitida em 16 episódios se iniciou em 11 de abril de 2020, 
+        finalizando em 25 de julho do mesmo ano. A terceira, Ordem Paranormal: Desconjuração, foi transmitida em 20 episódios, iniciando em 31 de outubro de 2020 e entrando em hiato em 19 de dezembro do mesmo ano, 
+        retornando ao ar em março de 2021 e tendo seu fim no dia 22 de maio de 2021. 
+        A campanha Ordem Paranormal: Calamidade foi anunciada brevemente no último episódio de Desconjuração e oficialmente revelada após o ARG da Calamidade no dia 29 de agosto de 2021; nesse mesmo dia,
+         foi revelado que essa seria a primeira temporada do universo do RPG feita presencialmente.</p>
