--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
         <h1 id="titulo"> Ordem Paranormal </h1>
-        <img src="Ordem.jpeg" alt="imagem">
+        <img src="Ordem.jpeg" center="imagem">
         <br>
                 <p>Ordem Paranormal, Um RPG criado pelo criador de conteudo Cellbit.A primeira temporada dessa série, 
                 A Ordem Paranormal, teve seu primeiro episódio exibido em 29 de fevereiro de 2020 no canal do streamer na Twitch.
@@ -64,4 +64,5 @@
         A campanha Ordem Paranormal: Calamidade foi anunciada brevemente no último episódio de Desconjuração e oficialmente revelada após o ARG da Calamidade no dia 29 de agosto de 2021; nesse mesmo dia,
          foi revelado que essa seria a primeira temporada do universo do RPG feita presencialmente.</p> <hr>
 
-
+         
+         
