--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
         <h1 id="titulo"> Ordem Paranormal </h1>
-        <img src="Ordem.jpeg" center="imagem">
+        <img src="Ordem.jpeg" alt="imagem">
         <br>
                 <p>Ordem Paranormal, Um RPG criado pelo criador de conteudo Cellbit.A primeira temporada dessa série, 
                 A Ordem Paranormal, teve seu primeiro episódio exibido em 29 de fevereiro de 2020 no canal do streamer na Twitch.
