--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 ou criando uma criatura enfim.... O ordem foi uma grande chave pra minha criatividade abrir, jogar RPG com os amigos é muito bom principalmente 
                 se for presencialmente, você consegue ver o personagem do seus amigos ali, como se fosse vivo, bom voltando para o sistema, diferente das temporadas
                 oficiais eu levei as que eu criei como um spin-off, com novos monstros, novas reliquias, novas realidades.
-                Tudo foi pensado pra ser divertido, mas com um pouco de terror que é o intuito do ordem 
+                Tudo foi pensado pra ser divertido, mas com um pouco de terror que é o intuito do ordem.
+                Mestrar uma mesa pode ser complicado na primeira vez ou primeira inpressão mas com o tempo você pega o jeito, eu criei uma historia onde assim como 
+                no ordem as reliquias não morrem mas são controladas por marcados (caso queira saber mais procure o livro do sistema) 
         </p>
          
          
