--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
                 oficiais eu levei as que eu criei como um spin-off, com novos monstros, novas reliquias, novas realidades.
                 Tudo foi pensado pra ser divertido, mas com um pouco de terror que é o intuito do ordem.
                 Mestrar uma mesa pode ser complicado na primeira vez ou primeira inpressão mas com o tempo você pega o jeito, eu criei uma historia onde assim como 
-                no ordem as reliquias não morrem mas são controladas por marcados (caso queira saber mais procure o livro do sistema) 
-        </p>
+                no ordem as reliquias não morrem mas são controladas por marcados (caso queira saber mais procure o livro do sistema), a minha conta a historia de uma 
+                mulher, que é medica chamada Louisy Ricci, tem um sonho estranho a noite como se estivesse em um loop, ela acorda em seu sonho com barulhos estranhos em um
+                lugar totalmente claro, onde derrepende algo que parece rastejar pelas paredes do local começa a cerca-la, dominando seu medo e sua sanidade, ela tinha duas 
+                escolhas ou fugir ou ficar ali, como é obvio ela escolhe fugir, corre na direção do que resta das paredes brancas, e derrepente no meio da correria
+                ela acorda com seu celular tocando.
+                Isso foi o inicio do RPG, teve muito mais cenas, coisas, misterios e lutas, mas é muita coisa pra escrever, enfim eu gostei muito do ordem, realmente
+                foi muito bom pra mim, abriu minha mente pra criatividade.</p>
          
          
