--- a/index.html
+++ b/index.html
@@ -80,5 +80,7 @@
                 foi muito bom pra mim, abriu minha mente pra criatividade.</p> 
 
                 <h4> Lrivos de regra e regras</h4>
+                <p>EU QUERO GOZA
+                </p>
          
          
