--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 <body>
 
 <div class="city">
-<h2>London</h2>
-<p>London is the capital of England.</p>
+<h2> O Paranormal</h2>
+<p>O paranormal, não vem pra nossa realidade de manira facil.</p>
 </div> 
 
 <div class="city">
-<h2>Paris</h2>
+<h2>A membrana</h2>
 <p>Paris is the capital of France.</p>
 </div>
 
