--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <html>
 <head>
 <style>
-.city {
+.Ordem {
   background-color: black;
   color: green;
   border: 10px solid purple;
@@ -96,19 +96,19 @@
 </head>
 <body>
 
-<div class="city">
+<div class="Ordem">
 <h2> O Paranormal</h2>
-<p>O paranormal, não vem pra nossa realidade de manira facil.</p>
+<p>O paranormal, não vem pra nossa realidade de manira facil, pelos menos é assim que deveria ser.</p>
 </div> 
 
-<div class="city">
+<div class="Ordem">
 <h2>A membrana</h2>
-<p>Paris is the capital of France.</p>
+<p> O que mede o quão o paranormal pode invadir a realidade.</p>
 </div>
 
-<div class="city">
-<h2>Tokyo</h2>
-<p>Tokyo is the capital of Japan.</p>
+<div class="Ordem">
+<h2>A Realidade</h2>
+<p>Onde todos vivemos, mesmo com coisas ruins acontecendo podemos salva-la.</p>
 </div>
 
 </body>
