--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <th>Spin-offs</th>
           </tr>
           <tr>
-            <td><a href="https://jamboeditora.com.br/produto/ordem-paranormal-rpg/">link Livro </a>Junbou Livraria</td>
+            <td><a href="https://jamboeditora.com.br/produto/ordem-paranormal-rpg/">link Livro </a>Jâmbo Editora</td>
             <td><a href="https://www.youtube.com/@OrdemParanormal">link Temporadas </a>Ordem Paranormal</td>
             <td><a href="https://www.youtube.com/@OrdemParanormal">link Episodiso extras </a>Spin-offs</td>
           </tr>
