--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         
         <h4>Links Para Assistir Ordem Paranromal</h4>
         
-        <table style="width:100%">
-          <tr>
+        <h3><table style="width:100%"></h3>
+         </table> <tr>
             <th>Livro de Regras</th>
             <th>Temporadas</th>
             <th>Spin-offs</th>
