--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         
         <h4>Links Para Assistir Ordem Paranromal</h4>
         
-        <h3> <table style="width: 5px;"> </h3>
+        <p> <table style="width: 5px;"> </p>
          </table> <tr>
             <th>Livro de Regras</th>
             <th>Temporadas</th>
