--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
 <html>
         <style>
         table, th, td {
-          border:1px solid black;
+          border:1px solid rgb(255, 255, 255);
         }
         </style>
         <body>
         
         <h4>Links Para Assistir Ordem Paranromal</h4>
         
-        <p> <table style="width: 5px;"> </p>
+        <p> <table class="tabela" style="width: 5px;"> </p>
          </table> <tr>
             <th>Livro de Regras</th>
             <th>Temporadas</th>
