--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <html>
         <style>
         table, th, td {
-          border:50 px solid rgb(255, 255, 255);
+          border: 100px;px solid rgb(255, 255, 255);
         }
         </style>
         <body>
