--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <html>
         <style>
         table, th, td {
-          border: 50px, rgb(rgb(0, 0, 0), grrgb(0, 255, 0)rgb(0, 0, 0))
+          border: 50px solid
         }
         </style>
         <body>
