--- a/index.html
+++ b/index.html
@@ -153,23 +153,23 @@ table, th, td {
 
 <table style="width:100%">
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <th>Livros De Regras</th>
+    <th>Temporada</th>
+    <th>Spin-offs</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Regras</td>
+    <td>Episodios</td>
+    <td>Episodio especial</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td><a href="https://jamboeditora.com.br/produto/ordem-paranormal-rpg/">link Livro </a>Jâmbo Editora</td>
+    <td><a href="https://www.youtube.com/@OrdemParanormal">link Temporadas </a>Ordem Paranormal</td>
+    <td><a href="https://www.youtube.com/@OrdemParanormal">link Episodiso extras </a>Spin-offs</td>
   </tr>
 </table>
 
-<p>To understand the example better, we have added borders to the table.</p>
+<p>Esses são os links para ver ou ler sobre ordem paranormal RPG.</p>
 
 </body>
 </html>
