--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 foi muito bom pra mim, abriu minha mente pra criatividade.</p> 
 
                 <h4> Lrivos de regra e regras</h4>
-                <p>O livro de regres do ordem começa, em uma parte muito boa...</p>
+                <p>O livro de regres do ordem começa, em uma parte muito boa..</p>
 
                 <html>
 <head>
