--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <h4>Links para assistir ou ler sobre Ordem Paranromal</h4>
 
-<table style="width:100%">
+<table style="width:100% rgb red ">
   <tr>
     <th>Livros De Regras</th>
     <th>Temporada</th>
