--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
 <body>
 
 <h4>Links para assistir ou ler sobre Ordem Paranromal</h4>
+<html>
+<style>
+table, th, td {
+  border:1px solid rgb(255, 0, 0);
+}
+</style>
+<body>
 
 <table style="width:100%">
   <tr>
