--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 Isso foi o inicio do RPG, teve muito mais cenas, coisas, misterios e lutas, mas é muita coisa pra escrever, enfim eu gostei muito do ordem, realmente
                 foi muito bom pra mim, abriu minha mente pra criatividade.</p> 
 
-                <h6> Lrivos de regra e regras</h6>
-                <p>O livro de regres do ordem começa, em uma parte muito boa..</p>
+                <h6> Livros de regras </h6>
+                <p>O livro de regras do ordem começa, em uma parte muito boa..</p>
 
                 <html>
 <head>
